some fixed for floating & moved text-align to style field

--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -588,13 +588,46 @@ a, span {
 	position:relative;
 }
 
-.absoluteField {
-	position:absolute;
-}
-
 .editorField.selected {
 	border: dashed 1px #515151;
 }
+
+.absoluteField {
+	position:absolute;
+	z-index: 5;
+}
+
+.editorField .icon-pushpin,
+.editorField .icon-pushpin:visited {
+	display: none;
+	
+	position: absolute;
+	top: 0px;
+	left: -50px;
+	width: 50px;
+	height: 30px;
+	
+	background: white;
+	border: solid 1px silver;
+	box-shadow: 1px 1px 3px gray;
+	z-index: 1000;
+	
+	font-size: 26px;
+	text-decoration: none;
+	color: #7CB467;
+	text-shadow: 2px 2px silver;
+}
+
+.icon-pushpin:hover,
+.editorField:hover .icon-pushpin {
+	display: block;
+}
+
+.absoluteField:hover .icon-pushpin {
+	text-shadow: 0px 0px silver;
+	color: #444;
+}
+
 
 .closePopup, .closePopup:visited,
 .remove, .remove:visited {
@@ -632,13 +665,16 @@ li.editorField,
 }
 
 textarea, .sliderWrapper span {
+	color: inherit;
+	display: inline-block;
+}
+
+textarea {
+	width: 99%;
 	overflow: hidden;
 	outline: none;
 	vertical-align: top;
 	resize: none;
-	width: 99%;
-	color: inherit;
-	display: inline-block;
 }
 
 h1 textarea, h1 span, 
@@ -712,7 +748,7 @@ ul.bulletList li textarea {
 .fTextAlign {
 	display: none;
 	position: absolute;
-	top: 20px;
+	top: -15px;
 	right: -115px;
 	width: 115px;
 	height: 30px;
